Add summary of chapter three

--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -9,7 +9,7 @@ The novel \textit{Marta} begins with an introductory monologue, describing the i
 % The introduction precedes the life story of the protagonist, Marta Świcka.
 The introduction is written from the point of view of a third-person omniscient narrator.
 It is not clear whether the narrator can be identified with the author of the novel, however, the opinions presented in the introduction can be interpreted as belonging to the author.
-In this section, the narrator takes issue with the novel \textit{Albina} by Mr. Jan Zachariasiewicz (1825--1906).
+In this section, the narrator takes issue with the novel \textit{Albina} by Mr.\ Jan Zachariasiewicz (1825--1906).
 Zachariasiewicz is attributed with stating that the reason women suffer, either on the moral or the physical level, is because they lack true love for a man, and that for a woman, the act of marriage is always motivated by pure calculation.
 The narrator considers this statement to be unjust and argues that the whole existence of a woman is built around the concept of love:
 Starting from early childhood, young girls yearn to grow up and have the honor to meet their destined life partner.
