--- a/4c.tex
+++ b/4c.tex
@@ -3,3 +3,14 @@
 
 The third chapter begins with the description of Marta Świcka, the protagonist, coming home after receiving the good news that she had been offered the position of a French language teacher.
 She reacts to the news with a lot of enthusiasm, relieved in the knowledge that she will finally be able to support herself and her daughter through her work.
+The news come at just the right time: the protagonist has already spent nearly all of her money, and would soon have no money to buy food or firewood.
+The tutoring broker that Marta approached back in chapter two told Marta that she may be able to get even more students and be offered better pay if she proves to be a conscientious and skillful teacher.
+
+The story follows with the description of the first meeting with Jadwiga, the 12-year-old daughter of Mr.\ and Mrs.\ Rudziński.
+The mother, Mrs.\ Maria Rudzińska, explains that the reason they would choose to offer the position of French tutor to a Polish woman rather than to a foreigner was to support the locals, who found it much more difficult to find jobs.
+
+As soon as they begin with their classes, little Jadwiga proves to be a challenging student for the inexperienced teacher: very diligent and curious.
+Marta realizes that her new student is in fact much more proficient in the French language than herself, and has a hard time answering her questions.
+
+At the same time, a male cousin of Maria Rudzińska by the name Aleksander, a handsome unmarried young man, notices the new teacher and secretly tells Maria about his affection towards the beautiful widow and asks to be introduced to her.
+However, Mrs.\ Rudzińska tells her cousin off, asking him not to bother the poor widow with his fickle affection, and telling him to seriously reconsider his attitude towards his personal life and career.
