Add more information about plot of chapter three

--- a/4c.tex
+++ b/4c.tex
@@ -3,14 +3,23 @@
 
 The third chapter begins with the description of Marta Świcka, the protagonist, coming home after receiving the good news that she had been offered the position of a French language teacher.
 She reacts to the news with a lot of enthusiasm, relieved in the knowledge that she will finally be able to support herself and her daughter through her work.
-The news come at just the right time: the protagonist has already spent nearly all of her money, and would soon have no money to buy food or firewood.
+The news come at just the right time: the protagonist has already spent nearly all of her money, and would soon have no money to buy food and firewood.
 The tutoring broker that Marta approached back in chapter two told Marta that she may be able to get even more students and be offered better pay if she proves to be a conscientious and skillful teacher.
 
 The story follows with the description of the first meeting with Jadwiga, the 12-year-old daughter of Mr.\ and Mrs.\ Rudziński.
-The mother, Mrs.\ Maria Rudzińska, explains that the reason they would choose to offer the position of French tutor to a Polish woman rather than to a foreigner was to support the locals, who found it much more difficult to find jobs.
+The mother, Mrs.\ Maria Rudzińska, explains that her daughter has already taken classes with an experienced teacher, a French woman by the name of Mrs.\ Dupont.
+The reason they chose to offer the position of French tutor to a Polish woman rather than to another foreigner was to support the locals, who found it much more difficult to find jobs.
 
-As soon as they begin with their classes, little Jadwiga proves to be a challenging student for the inexperienced teacher: very diligent and curious.
-Marta realizes that her new student is in fact much more proficient in the French language than herself, and has a hard time answering her questions.
-
-At the same time, a male cousin of Maria Rudzińska by the name Aleksander, a handsome unmarried young man, notices the new teacher and secretly tells Maria about his affection towards the beautiful widow and asks to be introduced to her.
+During their first class, a male cousin of Maria Rudzińska by the name Aleksander, a handsome unmarried young man, notices the new teacher and secretly tells Maria about his affection towards the beautiful widow and asks to be introduced to her.
 However, Mrs.\ Rudzińska tells her cousin off, asking him not to bother the poor widow with his fickle affection, and telling him to seriously reconsider his attitude towards his personal life and career.
+
+Starting from the first meeting with her new student, Marta instantly realizes that little Jadwiga is in fact much more proficient in the French language than herself.
+She has a hard time answering her student's questions.
+She decides to study on her own to make up for her lacking knowledge, but soon comes to the bitter realization that the lack in her knowledge is too big to be helped with such last-minute efforts.
+
+After a month of classes, Marta, on her own accord, decides to put an end to this relationship and announces to Mrs.\ Rudzińska that cannot teach her daughter any longer.
+Although both Mrs.\ Rudzińska and her daughter are aware of the teacher's incompetence, they do not do anything about it, knowing that without the meager income from these classes, the teacher would have with no means to earn a livelihood.
+They offer to do anything to help the poor widow find another way to earn money.
+Aleksander, Mrs.\ Rudzińska's cousin, having witnessed the situation, mentions that the magazine that Mr.\ Rudziński works for is currently looking for an illustrator, and suggests that Marta could apply for this position.
+He runs out of the apartment to visit Mr.\ Rudziński at the editor's office.
+Marta leaves without accepting payment for the month of French classes, saying that she has not taught little Jadwiga anything and feeling ashamed to take alms for useless work.
