--- a/_preamble.tex
+++ b/_preamble.tex
@@ -14,13 +14,13 @@
 \usepackage[autostyle]{csquotes}
 \definecolor{CompilationTime}{HTML}{aaaaaa}
 \usepackage[top=2.5cm,left=3.5cm,right=2.5cm,bottom=2.5cm]{geometry}
-\setmainfont[Mapping=tex-text]{Gentium Basic}
-\setsansfont[Scale=0.88]{Gentium Basic}
+\setmainfont[Mapping=tex-text]{Adobe Text Pro}
+\setsansfont[Scale=0.88]{Adobe Text Pro}
 \setCJKmainfont[Scale=0.89]{Noto Serif CJK TC}
 \setCJKsansfont{Noto Sans CJK TC}
 \setCJKmonofont{Noto Sans CJK TC}
-\newfontfamily\pyfont{Gentium Plus}
-\newfontfamily\cyrfont{Gentium Plus}
+\newfontfamily\pyfont{Doulos SIL}
+\newfontfamily\cyrfont{Doulos SIL}
 \newfontfamily\ipafont[Scale=0.95]{Doulos SIL}
 \pagestyle{fancy}
 \fancyhf{}
