Add dark mode, switch to Gentium

--- a/4c.tex
+++ b/4c.tex
@@ -22,4 +22,13 @@ Although both Mrs.\ Rudzińska and her daughter are aware of the teacher's incom
 They offer to do anything to help the poor widow find another way to earn money.
 Aleksander, Mrs.\ Rudzińska's cousin, having witnessed the situation, mentions that the magazine that Mr.\ Rudziński works for is currently looking for an illustrator, and suggests that Marta could apply for this position.
 He runs out of the apartment to visit Mr.\ Rudziński at the editor's office.
-Marta leaves without accepting payment for the month of French classes, saying that she has not taught little Jadwiga anything and feeling ashamed to take alms for useless work.
+Marta leaves without accepting payment for the month of French classes, saying that she has not taught little Jadwiga anything.
+She does this because she feels ashamed and feels it immoral to take money for useless work.
+
+While waiting for any response from Mr.\ Rudziński, Marta visits the office of Mrs.\ Żmińska, the tutoring broker who helped her come in contact with Mrs.\ Rudzińska.
+Hoping to find another opportunity to make a living teaching French, Marta offers to teach absolute beginners, which she reckons would be a better fit for her skillset.
+The broker meets her with formal coldness, deeply disappointed by Marta's resignation from the first teaching position.
+By showing her incompetence, she explains, she had damaged the reputation of her brokering office.
+With regard to beginner clasess, she says, the supply is much higher than the demand, and therefore she cannot promise to find any matching students.
+Marta realizes that she is just one of dozens of unqualified young women who visit the office every day, each with her own set of troubles, and that there is no way the broker could possibly help them all.
+She abandons all hope for a tutoring career.
