--- a/_dark.tex
+++ b/_dark.tex
@@ -1,7 +1,16 @@
 \usepackage{xcolor}
 \usepackage{pagecolor}
 
-\definecolor{bg}{HTML}{191919}
+\definecolor{bg}{HTML}{1D252C}
+\definecolor{fg}{HTML}{A0B3C5}
+\definecolor{urlcolor}{HTML}{8BD49C}
 
 \pagecolor{bg}
-\color{white}
+\color{fg}
+
+\hypersetup{
+  colorlinks = true,
+  linkbordercolor = {white},
+  urlcolor = urlcolor,
+  linkcolor = white
+}
