--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -1,6 +1,9 @@
 \chapter{Comparison of \textit{Marta} in Polish and Esperanto}
 
-This chapter makes an attempt to describe the contents of the Polish original of the novel \textit{Marta} and compare it with Ludwik Zamenhof's Esperanto translation.
+This chapter makes an attempt to describe the contents of the Polish source text of the novel \textit{Marta} and compare it with Ludwik Zamenhof's Esperanto translation.
+
+In this chapter, unless otherwise noted, the acronym ST (Source Text) will be used to refer to the Polish text, and the acronym TT (Target Text) will be used to refer to the Esperanto translation by Zamenhof.
+Each chapter of the ST will be summarized and through comparison with the corresponding fragment in the TT, the author
 In the process, it should be possible to identify parts of the translation where equivalence could not be achieved and try to describe the way Zamenhof dealt with these issues in the process of his translation work.
 
 \section{Analysis of the introduction}
@@ -41,7 +44,7 @@ This is due to the fact that the Polish language has evolved significantly over 
 The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka and her daughter, Janina, following the death of Marta's husband.
 
 \subsection{Summary of the plot of chapter one}
-Mrs. Świcka, having lost her only supporter, is compelled to move out of a comfortable apartment in Graniczna street---right next to a Baroque public park called Saxon Garden---into a single small room in the attic of a much humbler edifice in Piwna street, in the Old Town.
+Mrs.\ Świcka, having lost her only supporter, is compelled to move out of a comfortable apartment in Graniczna street---right next to what is now a public park called Saxon Garden---into a single small room in the attic of a much humbler edifice in Piwna street, in the Old Town.
 The woman, who has never worked for money in her life, needs to find a job to support herself and her four-year-old daughter.
 
 The chapter starts by presenting the circumstances in which the protagonist leaves her old apartment, surrounded by porters moving expensive furniture out of the building, taking away the last remnants of a life that the impoverished and incomplete family can no longer afford.
