--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,12pt]{book}
 \input{_preamble}
-% \input{_dark}
+\input{_dark}
+\input{_gentium}
 \begin{document}
 \frenchspacing
 \input{titlepage}
