--- a/titlepage.tex
+++ b/titlepage.tex
@@ -21,9 +21,9 @@
     \vspace{0.5em}
     {\large Advisor: Dr. Tzu-Yun Lai}\par
     \vspace{2cm}
-    {\large 高雄市，\zhtoday}\par
+    {\large 華沙，\zhtoday}\par
     \vspace{0.5em}
-    {\large Kaohsiung, \@date}
+    {\large Warsaw, \@date}
   \end{center}
   % \@thanks
 \end{titlepage}%
