--- a/chapter_five.tex
+++ b/chapter_five.tex
@@ -1,7 +1,7 @@
 \chapter{Comparison of \textit{Marta} in Chinese and Esperanto}
 
 This chapter aims to analyze the indirect translation of the novel \textit{Marta} into Chinese based on the Esperanto translation by Zamenhof.
-Through a careful analysis of the differences, the Author hopes to identify mistranslations, fragments of the text translated with little equivalence, as well as other discrepancies in meaning from the Polish original.
+Through a careful analysis of the differences, the author hopes to identify mistranslations, fragments of the text translated with little equivalence, as well as other discrepancies in meaning from the Polish original.
 Based on those differences, it should be possible to determine the reason for said differences, be it a result of earlier mistranslations, linguistic choices made by Zamenhof, or shortcomings of the international language itself.
 
 \section{Comparison of the first chapter}
