Add more content on chapter three

--- a/4c.tex
+++ b/4c.tex
@@ -11,19 +11,19 @@ The mother, Mrs.\ Maria Rudzińska, explains that her daughter has already taken
 The reason they chose to offer the position of French tutor to a Polish woman rather than to another foreigner was to support the locals, who found it much more difficult to find jobs.
 
 During their first class, a male cousin of Maria Rudzińska by the name Aleksander, a handsome unmarried young man, notices the new teacher and secretly tells Maria about his affection towards the beautiful widow and asks to be introduced to her.
-However, Mrs.\ Rudzińska tells her cousin off, asking him not to bother the poor widow with his fickle affection, and telling him to seriously reconsider his attitude towards his personal life and career.
+However, Maria tells her cousin off, asking him not to bother the poor widow with his fickle affection, and telling him to seriously reconsider his attitude towards his personal life and career.
 
 Starting from the first meeting with her new student, Marta instantly realizes that little Jadwiga is in fact much more proficient in the French language than herself.
 She has a hard time answering her student's questions.
 She decides to study on her own to make up for her lacking knowledge, but soon comes to the bitter realization that the lack in her knowledge is too big to be helped with such last-minute efforts.
 
-After a month of classes, Marta, on her own accord, decides to put an end to this relationship and announces to Mrs.\ Rudzińska that cannot teach her daughter any longer.
-Although both Mrs.\ Rudzińska and her daughter are aware of the teacher's incompetence, they do not do anything about it, knowing that without the meager income from these classes, the teacher would have with no means to earn a livelihood.
+After a month of classes, Marta decides to put an end to this relationship and announces to Mrs.\ Rudzińska that she cannot teach her daughter any longer.
+Although both Mrs.\ Rudzińska and her daughter are aware of the teacher's incompetence, they do not do anything about it, knowing that without the meager income from these classes, the teacher would end up with no means of livelihood.
 They offer to do anything to help the poor widow find another way to earn money.
-Aleksander, Mrs.\ Rudzińska's cousin, having witnessed the situation, mentions that the magazine that Mr.\ Rudziński works for is currently looking for an illustrator, and suggests that Marta could apply for this position.
-He runs out of the apartment to visit Mr.\ Rudziński at the editor's office.
+Aleksander, Maria's cousin, having witnessed the situation, mentions that the magazine that Mr.\ Rudziński works for is currently looking for an illustrator, and suggests that Marta could apply for that position.
+He goes to visit Mr.\ Rudziński at the editor's office.
 Marta leaves without accepting payment for the month of French classes, saying that she has not taught little Jadwiga anything.
-She does this because she feels ashamed and feels it immoral to take money for useless work.
+She feels ashamed and feels it immoral to take money for useless work.
 
 While waiting for any response from Mr.\ Rudziński, Marta visits the office of Mrs.\ Żmińska, the tutoring broker who helped her come in contact with Mrs.\ Rudzińska.
 Hoping to find another opportunity to make a living teaching French, Marta offers to teach absolute beginners, which she reckons would be a better fit for her skillset.
@@ -32,3 +32,19 @@ By showing her incompetence, she explains, she had damaged the reputation of her
 With regard to beginner clasess, she says, the supply is much higher than the demand, and therefore she cannot promise to find any matching students.
 Marta realizes that she is just one of dozens of unqualified young women who visit the office every day, each with her own set of troubles, and that there is no way the broker could possibly help them all.
 She abandons all hope for a tutoring career.
+
+Mrs.\ Rudzińska contacts Marta and notifies her that the magazine where her husband works is indeed looking for a new employee with good drawing skills.
+She hands Marta a drawing and a box of drawing utensils, asking her to copy a drawing.
+Whether or not she would be hired would depend entirely on her performance.
+Marta does her best and brings the copied drawing back to Maria, but it immediately turns out that Marta's drawing skills and knowledge of art are not sufficient to secure an illustrator's post.
+She gets feedback from the magazine telling her that she most certainly is endowed with an artistic talent, but has received insufficient education and practice.
+
+Mrs.\ Rudzińska suggests that Marta could try and find employment as a salesperson at her friend's luxury textile shop, saying that the only qualifications necessary for the job are the knowledge of textiles and the ability to measure and cut cloth.
+The owner of the shop, in spite of their old friendship, dismisses her, explaining that the job, although superficially simple, requires many skills that women do not possess, most notably the ability to keep immaculate order in the shop and in all calculations, good manners, and superb communication skills.
+Unable to help Marta get a job in sales, Maria bids farewell to the poor widow, shoving an envelope filled with money into her hand, and leaves hurriedly in a carriage.
+At first, Marta considers going to Mrs.\ Rudzińska's place and returning the envelope, but thinking of her malnourished child, she accepts the donation.
+
+The following day, she walks to the shop where she used to buy her dresses during better times, asking the shop owner to hire her as a seamstress.
+However, it turns out that even for that job she does not possess the necessary qualifications, not having any experience in the tailoring, and having never used a sewing machine.
+Following a suggestion of an old acquaintance, Marta takes on the post of a seamstress at the sewing parlor of Mrs.\ Szwejc, a dishonest entrepreneuse who never bothered investing in sewing machines and just kept exploiting unqualified seamstresses for measly wages.
+
