--- a/_dark.tex
+++ b/_dark.tex
@@ -2,7 +2,8 @@
 \usepackage{pagecolor}
 
 \definecolor{bg}{HTML}{1D252C}
-\definecolor{fg}{HTML}{A0B3C5}
+% \definecolor{fg}{HTML}{A0B3C5}
+\definecolor{fg}{HTML}{C0CCD8}
 \definecolor{urlcolor}{HTML}{8BD49C}
 
 \pagecolor{bg}
