Sync before moving to another computer

--- a/4e.tex
+++ b/4e.tex
@@ -3,4 +3,15 @@
 \subsection{Summary of the plot of chapter five}
 
 Chapter five begins six weeks after the occurrences of chapter four.
-Marta has just finished translating the French text and takes it back to the bookstore.
+Marta has just finished translating the French text and takes it back to the bookstore in Krakowskie Przedmieście, the main street of Warsaw's Old Town (Polish pronunciation: \ipa{[kraˈkɔfskʲɛ pʂɛdˈmjɛɕt͡ɕɛ]}).
+The owner of the bookstore rejects her work, arguing that although her translation style is in places very lively, her knowledge of both the source and the target language, as well as the specialised vocabulary related to the work, is insufficient for the project, rendering her translation not good enough to publish.
+Marta understands that the reason her work had been rejected is almost exactly the same as in case of her copied drawing.
+
+On the way home, she passes the Kazimierz Palace (Polish: \textit{Pałac Kazimierzowski}), a building used by Warsaw University, and witnesses a group of happy students.
+She is overcome with indignation and envy.
+When she drops the manuscript of her translation work on the street, she notices two three-rouble bills that the owner of the bookstore put inside.
+She feels offended by being denied honest work and being given money for nothing out of pity, but accepts the banknotes nevertheless.
+She sits down on the stairs of the Baroque Holy Cross Church on the opposite side of the road and cries.
+
+Meanwhile, Aleksander, the young cousin of Mrs.\ Maria Rudzińska, is walking down the street with a friend by the name Karolina, talking about his affection to the poor woman who had taught French to his niece.
+Aleksander's companion recognizes Marta, still seated on the stairs of the church, and invites her to her apartment in Królewska street.
