Add more on chapter 6

--- a/4f.tex
+++ b/4f.tex
@@ -9,3 +9,9 @@ Karolina was an orphan raised by a distant relative, a wealthy lady by the name 
 Karolina had been in love with Edward, the son of her patroness, with whom she was growing up.
 Edward would write love letters to Karolina, until one of the letters was intercepted by Mrs.\ Herminia.
 Not willing to let her son marry a poor orphan, she threw Karolina out of their house and arranged Edward's marriage with a wealthy heiress.
+
+Not unlike Marta, Karolina spent several months doing menial jobs and living in poverty.
+One day, in the streets of Warsaw she met Edward, who pretended not to recognize her.
+She realized that in the eyes of men, a woman was but a thing that could be discarded at will.
+She quit her menial job at a soap business and became a sponsorette of a wealthy man by the name of Mr. Witalis.
+According to the moral standards of the era, such a relationship amounted to prostitution.
