Finish summary of chapter six

--- a/4f.tex
+++ b/4f.tex
@@ -12,6 +12,16 @@ Not willing to let her son marry a poor orphan, she threw Karolina out of their 
 
 Not unlike Marta, Karolina spent several months doing menial jobs and living in poverty.
 One day, in the streets of Warsaw she met Edward, who pretended not to recognize her.
-She realized that in the eyes of men, a woman was but a thing that could be discarded at will.
-She quit her menial job at a soap business and became a sponsorette of a wealthy man by the name of Mr. Witalis.
+She realized that in the eyes of men, a woman was but a toy, something that could be discarded at will, and no one would object.
+Even worse, a man who treated women badly was considered to be macho and enjoyed the respect of peers and the society.
+She quit her menial job at a soap business and became a mistress of a wealthy man by the name of Mr. Witalis.
 According to the moral standards of the era, such a relationship amounted to prostitution.
+She offers Marta to do the same and move in to a room next door, together with her daughter.
+However, Marta refuses, saying that she still loves her late husband.
+Karolina replies that her attitude will surely bring about her demise, that she will end up begging and stealing and will starve to death.
+
+After Marta leaves in sadness, Mr. Aleksander comes to visit Karolina.
+He asks for more details about Marta, and whether he could possibly enter a romantic relationship with her.
+Karolina replies that this could indeed be possible, if he decided to marry her.
+Aleksander, accustomed to the liberties available to unmarried men, is not very happy to hear that and brushes off the notion of marriage as a bad joke.
+He inquires about Marta's workplace and announces that he would visit Marta at work the following day.
