Refactor files in chapter 4, finish summary of VII

--- a/ch4/4c.tex
+++ b/ch4/4c.tex
@@ -10,7 +10,7 @@ The story follows with the description of the first meeting with Jadwiga, the 12
 The mother, Mrs.\ Maria Rudzińska, explains that her daughter has already taken classes with an experienced teacher, a French woman by the name of Mrs.\ Dupont.
 The reason they chose to offer the position of French tutor to a Polish woman rather than to another foreigner was to support the locals, who found it much more difficult to find jobs.
 
-During their first class, a male cousin of Maria Rudzińska by the name Aleksander, a handsome unmarried young man, notices the new teacher and secretly tells Maria about his affection towards the beautiful widow and asks to be introduced to her.
+During their first class, a male cousin of Maria Rudzińska by the name Aleksander Łącki, a handsome bachelor, notices the new teacher and secretly tells Maria about his affection towards the beautiful widow and asks to be introduced to her.
 However, Maria tells her cousin off, asking him not to bother the poor widow with his fickle affection, and telling him to seriously reconsider his attitude towards his personal life and career.
 
 Starting from the first meeting with her new student, Marta instantly realizes that little Jadwiga is in fact much more proficient in the French language than herself.
