--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -6,154 +6,11 @@ In this chapter, unless otherwise noted, the acronym ST (Source Text) will be us
 Each chapter of the ST will be summarized and through comparison with the corresponding fragment in the TT, the author
 In the process, it should be possible to identify parts of the translation where equivalence could not be achieved and try to describe the way Zamenhof dealt with these issues in the process of his translation work.
 
-\section{Analysis of the introduction}
-
-The novel \textit{Marta} begins with an introductory monologue, describing the importance of love in the life of a woman.
-% The introduction precedes the life story of the protagonist, Marta Świcka.
-The introduction is written from the point of view of a third-person omniscient narrator.
-It is not clear whether the narrator can be identified with the author of the novel, however, the opinions presented in the introduction can be interpreted as belonging to the author.
-In this section, the narrator takes issue with the novel \textit{Albina} by Mr.\ Jan Zachariasiewicz (1825--1906).
-Zachariasiewicz is attributed with stating that the reason women suffer, either on the moral or the physical level, is because they lack true love for a man, and that for a woman, the act of marriage is always motivated by pure calculation.
-The narrator considers this statement to be unjust and argues that the whole existence of a woman is built around the concept of love:
-Starting from early childhood, young girls yearn to grow up and have the honor to meet their destined life partner.
-In some cases, their wishes are granted, and they end up marrying a man they love at the church and living happily ever after.
-In many other cases, something along the way goes wrong and the woman has to live a sinful life of suffering and hunger.
-This introduction makes ground for the story of Marta Świcka, whose life goes astray in a lot of ways.
-
-In the source text, the introduction is written in a lofty, poetic style with archaic wording.
-Zamenhof managed to translate the introduction with a high degree of equivalence.
-In this part of the translation, the Author did not manage to find any deviations in meaning from the source text.
-For a modern reader versed in both Polish and Esperanto, the translation may be even easier to understand than the source text.
-This is due to the fact that the Polish language has evolved significantly over the past hundred of years, while the fundamental rules of Esperanto remained intact.
-
-% Syntactic parallelism
-
-% \begin{displayquote}
-%   Życie kobiety to wiecznie gorejący płomień miłości --- powiadają \textbf{jedni}.
-%   Życie kobiety to zaparcie się --- twierdzą \textbf{inni}.
-%   Życie kobiety to macierzyństwo --- wołają \textbf{tamci}.
-%   Życie kobiety to igraszka --- żartują \textbf{inni jeszcze}.
-% \end{displayquote}
-
-% \begin{displayquote}
-%   La vivo de virino estas eterne brulanta flamo de amo, diras \textbf{unuj}. La vivo de virino estas sinoferado, certigas \textbf{aliaj}. La vivo de virino estas patrineco, krias \textbf{parto da homoj}. La vivo de virino estas amuziĝado, ŝercas \textbf{aliaj}.
-% \end{displayquote}
-
-\section{Analysis of chapter one}
-
-The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka and her daughter, Janina, following the death of Marta's husband.
-
-\subsection{Summary of the plot of chapter one}
-Mrs.\ Świcka, having lost her only supporter, is compelled to move out of a comfortable apartment in Graniczna street---right next to what is now a public park called Saxon Garden---into a single small room in the attic of a much humbler edifice in Piwna street, in the Old Town.
-The woman, who has never worked for money in her life, needs to find a job to support herself and her four-year-old daughter.
-
-The chapter starts by presenting the circumstances in which the protagonist leaves her old apartment, surrounded by porters moving expensive furniture out of the building, taking away the last remnants of a life that the impoverished and incomplete family can no longer afford.
-After all furniture and belongings have been taken away, Marta goes to her new rented room.
-On the way, she is accompanied by her daughter and her former servant girl, Zofia, which subsequently leaves for her new masters' place.
-
-The chapter continues with a description of the protagonist's nightly errand to buy food for her child, in an atmosphere of fear and uncertainty.
-It is the first time when she needs to go outside on her own at night.
-Afraid to leave, she encounters two people, the caretaker of her edifice, and a woman whom she guessed to be the caretaker's wife.
-She pleads both of them to run the errand for her, but both refuse, seeing the widow's poor financial condition.
-Finally, the protagonist goes to a shop to buy food, overcoming her fears.
-On the way home, she is approached by a stranger humming a frivolous song, who shouts at her to slow down and ``go for a walk'' with him.
-In spite of all the perils, she manages to return home to her daughter, make tea, and put her daughter to sleep.
-The chapter ends with the protagonist sitting at the fireplace and thinking about her new way of life.
-
-\subsection{Analysis of the language of the Esperanto translation}
-
-In this part of the translation, Zamenhof managed to preserve both the precise meaning of most of the words and their literary value. The text is easy to read and understand for a reader versed in Esperanto.
-
-There are, however, slight omissions and changes which do modify the perception of the translation.
-An important detail of the translation apparent from this section of the translation is that the names of streets in Warsaw: Graniczna and Piwna, are left in their original Polish spelling, meaningless to a reader not versed in any Slavic language. % TODO: Are all of them left in Polish?
-The name ``Graniczna'' means ``[the street] at the boundary,'' and has been rendered phonetically in the Chinese translation as Gelanazhina Street (格拉納支納街 \pinyin{Gélānàzhīnà jiē}) which not only does not convey any meaning, but is also a mispronunciation of the Polish name, which is pronounced \ipa{[ɡrãˈɲiʧ̑na]}.
-while the name ``Piwna'' means ``the beer street.''
-Although the meanings of those names do not really bring any added value to the story, one could argue that a phonetic rendition does result in a loss of meaning.
-
---- Mamo! --- szepnęła dziewczynka --- patrz! biurko ojca!
-
---- Panjo! --- mallaŭte diris la knabineto, --- la skribtablo de la patro!
-
-\begin{displayquote}
-Znać było, że przedmioty te, z którymi \textbf{rozstawała się widocznie}, posiadały dla niej nie tylko materialną cenę;
-\end{displayquote}
-
-\begin{displayquote}
-Oni povis rimarki, ke tiuj objektoj, kiuj \textbf{videble estis forprenataj de ŝi}, havis por ŝi valoron ne sole materialan;
-\end{displayquote}
-
-In the whole section, the Polish verb \textit{szeptać} (`to whisper') is always translated into Esperanto as \textit{mallaŭte paroli} (`to speak quietly').
-Both expressions convey similar meaning and though not fully equivalent, this change is unlikely to result in mistranslations in the Chinese text.
-
-\subsection{Omissions}
-
-Certain sentences or words in the source text were omitted in the translation.
-This sentence describes the grand piano that Marta had to sell:
-
-\begin{displayquote}
-Po biurku ukazał się na dziedzińcu \textbf{ładny kralowski fortepian}, ale kobieta w żałobie obojętniej już za nim wzrokiem powiodła.
-\end{displayquote}
-
-In the translation, the expression \textit{ładny kralowski fortepian} (`a good-looking grand piano made by the company Krall \& Seider') has been translated as \textit{bela fortepiano} (`a beautiful grand piano'), omitting the indication of origin altogether:
-
-\begin{displayquote}
-Post la skribtablo aperis sur la korto \textbf{bela fortepiano}, sed la virino en funebra vesto akompanis ĝin jam per rigardo pli indiferenta.
-\end{displayquote}
-
-The said company was a popular maker of pianofortes in Poland during the life and times of Orzeszkowa, but the company name was unlikely to be recognized abroad.
-Therefore, the omission seems reasonable and was not likely to result in mistranslations.
-
-When Marta's daughter notices her bed being taken away, she shouts out in dismay:
-
-\begin{displayquote}
---- Łóżeczko moje, mamo! --- zawołała dziewczynka --- ludzie ci i łóżeczko moje zabierają, i tę kołderkę, którąś mi sama zrobiła! \textbf{Ja nie chcę, aby oni to zabierali!} Odbierz, mamo, od nich łóżeczko moje i kołderkę.
-\end{displayquote}
-
-In the translation, the sentence \textit{Ja nie chcę, aby oni to zabierali!} (I do not want them to take it away) is omitted altogether:
-
-\begin{displayquote}
---- Mia liteto, panjo! --- ekkriis la knabineto --- tiuj homoj forprenas ankaŭ mian liteton, kaj ankaŭ tiun kovrileton, kiun vi mem al mi faris! Reprenu, panjo, de ili mian liteton kaj la kovrileton.
-\end{displayquote}
-
-\subsection{Nativization of given names, archaisms, and bad grammar}
-
-Let us take a look at the parting words that the protagonist, Marta, exchanged with her servant girl, Zosia:
-
-\begin{displayquote}
---- Dziękuję ci, \textbf{Zosiu} --- rzekła cicho --- byłaś dla mnie bardzo dobrą.
-
---- \textbf{Pani} to \textbf{byłaś} zawsze dobrą dla mnie --- zawołała dziewczyna --- służyłam u pani cztery lata i nigdzie nie było mi i nie będzie już \textbf{lepiej jak u pani}.
-\end{displayquote}
-
-These words were thus rendered in the Esperanto translation:
-
-\begin{displayquote}
---- Mi dankas vin, \textbf{Sonjo}, ŝi diris mallaŭte, --- vi estis por mi tre bona.
-
---- Sinjorino, \textbf{vi} ĉiam \textbf{estis} bona por mi, --- ekkriis la knabino, --- mi servis ĉe vi kvar jarojn, kaj nenie estis al mi nek iam estos \textbf{pli bone, ol ĉe vi}.
-\end{displayquote}
-
-In the source text, the protagonist calls the maiden ``Zosia,'' which is a diminutive form of the name Zofia.
-Although there is no clear rule regarding diminutive names in Esperanto, Zamenhof nativized the name as ``Sonjo,'' which is the Esperanto spelling of ``Sonja,'' the diminutive form of the Russian name ``Sofia.''
-
-% ``Thank you, Sophie,'' she said quietly, ``you have been very good to me.''
-
-% ``Milady, you have always been good to me,'' cried the maiden, ``I have served you for four years, and nowhere has ever been, nowhere will ever be better than with you.''
-
-Another thing worth noticing in this fragment, as well as many other places throughout the source text, is that the dialogues contain archaic forms and grammar that would be considered incorrect in modern Polish. % Znaleźć źródło!
-For instance, according to the rules of modern Polish grammar, when using the honorific form \textit{Pani} (`Milady; Mistress; Madam') or \textit{Pan} (`Sir; Mister'), the verb should be conjugated in the third person singular form (as in: \textit{Pani była}).
-In the source text, however, the second person singular is used (\textit{Pani byłaś}).
-Zosia, the maiden, uses the conjunction % sprawdzić, co to za część mowy
-\textit{jak} (`as; how') in comparisons (\textit{lepiej jak u pani}), rather than \textit{niż} (`than', as in: \textit{lepiej, niż u pani}).
-This is a colloquialism considered incorrect by formal grammar and very common to this day in the spoken language. % źródło
-However, the grammatical rules of Esperanto are few and simple; there is no honorific verb form, and all conjugations take exactly the same form, regardless of the grammatical person.
-In Esperanto, it is simply not possible to translate anything with bad grammar without altering the meaning of a sentence.
-Therefore the translation fails to convey the grammatical mistakes occuring in the speech of the servant girl.
-Bad grammar and archaisms, however, do not convey meaning on their own, therefore the Author thinks it safe to assume that the translation of this fragments still achieves a high degree of equivalence.
-
-\input{4b}
-\input{4c}
-\input{4d}
-\input{4e}
-\input{4f}
-\input{4g}
+\input{ch4/intro}
+\input{ch4/4a}
+\input{ch4/4b}
+\input{ch4/4c}
+\input{ch4/4d}
+\input{ch4/4e}
+\input{ch4/4f}
+\input{ch4/4g}
