--- a/references.tex
+++ b/references.tex
@@ -26,6 +26,8 @@ Gloger M. (2007). \textit{Pozytywizm: między nowoczesnością a modernizmem} [P
 
 Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
 
+Krasicki I. \textit{Dzieci i żaby}. Retrieved November 26th, 2021, from \url{https://wolnelektury.pl/katalog/lektura/dzieci-i-zaby-bajki-nowe.html}.
+
 % Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
 
 Liu Xiaozhe 劉曉哲. (2016). \textit{Esperanto en Ĉinio}. Retrieved March 24th, 2020, from \url{http://reto.cn/php/esperanto/esperanto-en-cinio/}.
