--- a/ch4/4g.tex
+++ b/ch4/4g.tex
@@ -20,7 +20,7 @@ She criticizes his acts by quoting a fable by a Polish poet from the Enlightenme
 \begin{displayquote}
     Chłopcy, przestańcie, bo się źle bawicie!\\
     Dla was to jest igraszką, nam idzie o życie\footnote{%
-      From Krasicki. In a loose translation by the author: ,,Boys, stop, because you are playing wrong! For you, it is a game, for us it is about life.'' Krasicki.}
+      From Krasicki. In a loose translation by the author: ,,Boys, stop, because you are playing wrong! For you, it is a game, for us it is about life.''}
 \end{displayquote}
 
 Having said these words, she leaves Aleksander dumbfounded, standing in the gate.
@@ -28,3 +28,5 @@ For a brief moment, Aleksander seems to ponder the consequences of his actions t
 It is Miss Eleonora Szwejcówna, one of the daughters of Mrs.\ Szwejcowa.
 She encourages Aleksander to come visit their home more often.
 Miss Eleonora enters the courtyard of the edifice, but Mr.\ Łącki does not follow her there, thinking it would be improper for the seamstresses to see him walking around with the heiress.
+
+The chapter ends with an exclamation paraphrasing a monolog from \textit{Forefathers' Eve}, a poetic drama by Adam Mickiewicz. The original phrase read: ,,Kobieto! puchu marny! ty wietrzna istoto!'' (`Woman! You wretched fluff! You unstable creature!'), and was adjusted by Orzeszkowa to refer to men.
