Stub analysis of chapter 8

--- a/ch4/4g.tex
+++ b/ch4/4g.tex
@@ -29,4 +29,4 @@ It is Miss Eleonora Szwejcówna, one of the daughters of Mrs.\ Szwejcowa.
 She encourages Aleksander to come visit their home more often.
 Miss Eleonora enters the courtyard of the edifice, but Mr.\ Łącki does not follow her there, thinking it would be improper for the seamstresses to see him walking around with the heiress.
 
-The chapter ends with an exclamation paraphrasing a monolog from \textit{Forefathers' Eve}, a poetic drama by Adam Mickiewicz. The original phrase read: ,,Kobieto! puchu marny! ty wietrzna istoto!'' (`Woman! You wretched fluff! You unstable creature!'), and was adjusted by Orzeszkowa to refer to men.
+The chapter ends with an exclamation paraphrasing a monologue from \textit{Forefathers' Eve}, a poetic drama by Adam Mickiewicz. The original phrase read: ,,Kobieto! puchu marny! ty wietrzna istoto!'' (`Woman! You wretched fluff! You fickle creature!'), and was adjusted by Orzeszkowa to refer to men.
